# rakuten_sec_notifier

./: README.md  pyproject.toml
.github/workflows/: poetry_schedule.yml
rakuten_sec_notifier/: main.py  original_logger.py
rakuten_sec_notifier/crawler/: rakuten_sec_crawler.py
tests/: test_rakuten_sec_notifier.py
