[tool.poetry]
name = "rakuten-sec-notifier"
version = "0.1.0"
description = ""
authors = ["HIR0Y0SHI"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"
slack-sdk = "^3.15.1"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
